--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -186,7 +186,7 @@ layout: default
                             
                         </ul>
                         {% if site.email %}
-                            <p>✉️ {{site.email}}</p>
+                            <p>✉️ <a href="mailto:{{site.email}}">{{site.email}}</a></p>
                         {% endif %}
                     </div>
                 </section>
